--- a/.circleci/ansible/create-eks-cluster.yml
+++ b/.circleci/ansible/create-eks-cluster.yml
@@ -2,7 +2,7 @@
 
 - name: "configuration play." 
   hosts: ec2
-  user: ubuntu
+  user: false
   become: true
   become_method: sudo
   become_user: root  
