fix copy eks deployment file code

--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -21,17 +21,17 @@
     state: latest
     update_cache: yes
 
-- name: "copy eks deployment file"
-  become: true
-  copy:
-    src: eks-app-deploy.yml
-    dest: /home/ubuntu/
+# - name: "copy eks deployment file"
+#   become: true
+#   copy:
+#     src: eks-app-deploy.yml
+#     dest: /home/ubuntu/
 
-- name: "copy eks app service file"
-  become: true
-  copy:
-    src: eks-app-service.yml
-    dest: /home/ubuntu/
+# - name: "copy eks app service file"
+#   become: true
+#   copy:
+#     src: eks-app-service.yml
+#     dest: /home/ubuntu/
 
 - name: "Install AWS CLI"
   shell: |
