fixed fail service creation

--- a/.circleci/ansible/roles/delete-previous-deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/delete-previous-deploy/tasks/main.yml
@@ -2,6 +2,10 @@
 - name: "Delete previous deployment"
   command: kubectl delete deploy ph-app-deployment
 
+- name: Pause for 1 minutes deletion
+  ansible.builtin.pause:
+    minutes: 1
+
 - name: "Delete previous service"
   command: kubectl delete service ph-app-service
 
