--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -325,14 +325,14 @@ workflows:
       #     requires: [attach_role_to_ec2_server]      
       # - create_eks_cluster:
       #     requires: [configure_ec2_deployment_server]
-      - persist_deployment_server:
-          requires: [create_image]
-      - delete_previous_eks_deployment:
-          requires: [persist_deployment_server]
-      - create_delpoyment_eks_cluster:
-          requires: [delete_previous_eks_deployment]
-      - create_service_eks_cluster:
-          requires: [create_delpoyment_eks_cluster]      
+      # - persist_deployment_server:
+      #     requires: [create_image]
+      # - delete_previous_eks_deployment:
+      #     requires: [persist_deployment_server]
+      # - create_delpoyment_eks_cluster:
+      #     requires: [delete_previous_eks_deployment]
+      # - create_service_eks_cluster:
+      #     requires: [create_delpoyment_eks_cluster]      
       #- delete_ec2_deployment_server          
       #- delete_eks_cluster
       #- delete_aws_infrastructure
